--- a/index.html
+++ b/index.html
@@ -39,29 +39,36 @@
         </div>
 
     </div>
-    <div class="Head">Those who made it.</div>
+    <div class="Head">Testimony</div>
 
     <div class="Imagery">
         <div class="Boxx">
             <div class="Boxx2">
               <div>
                 <img src="./img/chaddoge.png"> 
-                <div class="G">The Commander Dog</div>
+                <div class="T">"⭐⭐⭐⭐⭐"</div>
+
+                <div class="G">- The Commander Dog</div>
 
             </div>
             <div>
                 <img src="./img/cooldoge.png"> 
-                <div class="G">The Meme Dog</div>
+                <div class="T">"I'm blue Da ba dee da ba di"</div>
+
+                <div class="G">- The Meme Dog</div>
 
             </div>
             <div>
                 <img src="./img/kawaiidoge.png"> 
-                <div class="G">The Anime Dog</div>
+                <div class="T">"The One Piece is REAL!!!"</div>
+                <div class="G">- The Anime Dog</div>
 
             </div>
             <div>
                 <img src="./img/buffdoge.png"> 
-                <div class="G">The Buff Dog</div>
+                <div class="T">"Tren Tren Tren"</div>
+
+                <div class="G">- The Buff Dog</div>
 
             </div>
             </div>
@@ -80,7 +87,9 @@
         <div class="dBox">
             <div class="All">
                 <div class="Bro">
-                    <div class="text">It's time to not be horny anymore!</div>
+                    <div class="text">            
+                        It's time to be happy again...
+                    </div>
                     <div class="text2">Sign up for our product by clicking that button right over there!  </div>
                 </div>
                 <button>Sign up</button>
@@ -88,7 +97,7 @@
         </div>
     </div>
     <footer>
-        Copyright &copy The Odin Project 2021
+        Copyright &copy Aron Chen 2024
     </footer>
 </body>
 </html>
